# Rift-L1-Blockchain

./: ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  Rift_L1_Pitch.pptx  run_5hour_test.sh
.github/workflows/: ci.yml  rust.yml
src/: error.rs  lib.rs  main.rs
src/core/: invariants.rs  mod.rs  operations.rs  state.rs
src/token/: mod.rs  rift_token.rs
