[package]
name = "rift-l1-core"
version = "0.1.0"
edition = "2021"
description = "Rift L1 Blockchain - Reality Fractal Theory (RFT) mathematical core"
license = "MIT"
authors = ["Eugeny (RFT-SIRM)"]
repository = "https://github.com/RFT-SIRM/Rift-L1-Blockchain"

[lib]
name = "rift_l1"
path = "src/lib.rs"

[[bin]]
name = "fuzz_integrated"
path = "src/main.rs"

[dependencies]
rand = "0.8"
rand_chacha = "0.3"

[profile.release]
opt-level = 3
lto = true
panic = "unwind"
debug = true
